Fix search and filter overflow text not being hidden by transparency search input

--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -116,6 +116,7 @@ $colors--light-theme--background-default: #fff !default;
 $colors--light-theme--background-alt: #f7f7f7 !default;
 $colors--light-theme--background-code: $color-code-background !default;
 $colors--light-theme--background-inputs: adjust-color($color-x-dark, $lightness: 100% * (1 - $input-background-opacity-amount)) !default;
+$colors--light-theme--background-inputs--opaque: $colors--light-theme--background-inputs; // light theme inputs background is already opaque
 $colors--light-theme--background-active: adjust-color($color-x-dark, $lightness: 100% * (1 - $active-background-opacity-amount)) !default;
 $colors--light-theme--background-hover: adjust-color($color-x-dark, $lightness: 100% * (1 - $hover-background-opacity-amount)) !default;
 $colors--light-theme--background-overlay: transparentize($color-dark, 0.15) !default;
@@ -175,6 +176,7 @@ $colors--dark-theme--background-default: #262626 !default;
 $colors--dark-theme--background-alt: #202020 !default;
 $colors--dark-theme--background-code: $color-code-background-dark !default;
 $colors--dark-theme--background-inputs: rgba($colors--dark-theme--text-default, $input-background-opacity-amount) !default;
+$colors--dark-theme--background-inputs--opaque: #2f2f2f !default;
 $colors--dark-theme--background-active: rgba($colors--dark-theme--text-default, $active-background-opacity-amount) !default;
 $colors--dark-theme--background-hover: rgba($colors--dark-theme--text-default, $hover-background-opacity-amount) !default;
 $colors--dark-theme--background-overlay: transparentize($color-dark, 0.15) !default;
@@ -223,6 +225,7 @@ $colors-dark-theme--tinted-borders: (
 
 // Paper theme (work in progress)
 $colors--paper-theme--background-inputs: rgba($color-x-dark, $input-background-opacity-amount) !default;
+$colors--paper-theme--background-inputs--opaque: #e9e9e9 !default;
 $colors--paper-theme--background-active: rgba($color-x-dark, $active-background-opacity-amount) !default;
 $colors--paper-theme--background-hover: rgba($color-x-dark, $hover-background-opacity-amount) !default;
 
@@ -241,6 +244,7 @@ $colors--theme--background-default: var(--vf-color-background-default);
 $colors--theme--background-alt: var(--vf-color-background-alt);
 $colors--theme--background-code: var(--vf-color-background-code);
 $colors--theme--background-inputs: var(--vf-color-background-inputs);
+$colors--theme--background-inputs--opaque: var(--vf-color-background-inputs-opaque);
 $colors--theme--background-active: var(--vf-color-background-active);
 $colors--theme--background-hover: var(--vf-color-background-hover);
 $colors--theme--background-overlay: var(--vf-color-background-overlay);
@@ -295,6 +299,7 @@ $colors--theme--button-negative-text: var(--vf-color-button-negative-text);
   --vf-color-background-alt: #{$colors--light-theme--background-alt};
   --vf-color-background-code: #{$colors--light-theme--background-code};
   --vf-color-background-inputs: #{$colors--light-theme--background-inputs};
+  --vf-color-background-inputs-opaque: #{$colors--light-theme--background-inputs--opaque};
   --vf-color-background-active: #{$colors--light-theme--background-active};
   --vf-color-background-hover: #{$colors--light-theme--background-hover};
   --vf-color-background-overlay: #{$colors--light-theme--background-overlay};
@@ -349,6 +354,7 @@ $colors--theme--button-negative-text: var(--vf-color-button-negative-text);
   --vf-color-background-alt: #{$colors--dark-theme--background-alt};
   --vf-color-background-code: #{$colors--dark-theme--background-code};
   --vf-color-background-inputs: #{$colors--dark-theme--background-inputs};
+  --vf-color-background-inputs-opaque: #{$colors--dark-theme--background-inputs--opaque};
   --vf-color-background-active: #{$colors--dark-theme--background-active};
   --vf-color-background-hover: #{$colors--dark-theme--background-hover};
   --vf-color-background-overlay: #{$colors--dark-theme--background-overlay};
@@ -399,6 +405,7 @@ $colors--theme--button-negative-text: var(--vf-color-button-negative-text);
   --vf-color-background-alt: #{$color-x-light};
 
   --vf-color-background-inputs: #{$colors--paper-theme--background-inputs};
+  --vf-color-background-inputs-opaque: #{$colors--paper-theme--background-inputs--opaque};
   --vf-color-background-active: #{$colors--paper-theme--background-active};
   --vf-color-background-hover: #{$colors--paper-theme--background-hover};
 }
